--- a/index.html
+++ b/index.html
@@ -6,29 +6,47 @@
         <title>La Rêverie</title>
         <link rel="stylesheet" href="styles.css" />
         <link rel="icon" href="res/Logo.png" />
+        <script src="https://kit.fontawesome.com/b9c3352c8a.js" crossorigin="anonymous"></script>
     </head>
 
     <body>
-        <header>
-            <h1>Welcome to La Rêverie</h1>
+        <header class="header">
+            <a href="#" class="logo">LA RÊVERIE.</a>
+            <nav class="navbar">
+                <a href="#" class="active">Home</a>
+                <a href="#">About</a>
+                <a href="#">Gallery</a>
+                <a href="#">Contact</a>
+            </nav>
         </header>
-        <br />
-        <main>
-            <section>
-                <h2>About The Website</h2>
+
+        <section class="home">
+            <div class="home-content">
+                <h1>Welcome to La Rêverie.</h1>
+                <h2>A solo project on art and craft.</h2>
                 <p>
-                    This website is my portfolio. Here, you can find all of my artworks and links to
-                    buy the artwork has also been provided at the respective pages of each of these,
-                    if still available.
-                    <br />
-                    <br />
-                    For requests on personalized artworks, you can contact me using my
-                    <a href="mailto:lareverie.creations1982@gmail.com">email address</a>.
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores praesentium
+                    enim placeat excepturi! Nobis, quibusdam autem? Laborum minus nobis voluptates,
+                    exercitationem earum sapiente ad fugiat repudiandae ea, facilis tenetur. Fuga
+                    quae recusandae, enim aspernatur optio, quod non veniam, suscipit molestias
+                    eveniet at. Impedit nemo animi error itaque labore, tenetur eos.
                 </p>
-            </section>
-        </main>
-        <footer>
-            <p>© 2023 La Rêverie. All rights reserved.</p>
-        </footer>
+                <div class="btn-box">
+                    <a href="#">See my creations</a>
+                    <a href="#">Contact me</a>
+                </div>
+            </div>
+
+            <div class="home-image">
+                <img src="res/La R.png" alt="La Rêverie Logo" />
+            </div>
+
+            <div class="social-links">
+                <a href="#"><i class="fa-brands fa-x-twitter"></i></a>
+                <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+                <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                <a href="#"><i class="fa-solid fa-envelope"></i></a>
+            </div>
+        </section>
     </body>
 </html>
